<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.Login">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="@dimen/_30sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/abc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcome"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/logintitle"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_below="@id/abc"
                android:layout_marginLeft="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginRight="@dimen/_7sdp"
                    android:layout_weight="1"
                    android:src="@drawable/apple" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:layout_marginRight="@dimen/_7sdp"
                    android:layout_weight="1"
                    android:src="@drawable/google" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:layout_weight="1"
                    android:src="@drawable/facebook" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/nameAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:backgroundTint="@color/black"
                    android:drawableStart="@drawable/ic_baseline_person_outline_24"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/name"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textColorHint="#989898"
                    android:textCursorDrawable="@drawable/blackpipe"
                    android:textSize="@dimen/_16sdp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/name_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:backgroundTint="@color/black"
                    android:drawableStart="@drawable/ic_baseline_mail_outline_24"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/email"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textColorHint="#989898"
                    android:textCursorDrawable="@drawable/blackpipe"
                    android:textSize="@dimen/_16sdp" />

                <EditText
                    android:id="@+id/password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:backgroundTint="@color/black"
                    android:drawableStart="@drawable/ic_outline_lock_24"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textColorHint="#989898"
                    android:textCursorDrawable="@drawable/blackpipe"
                    android:textSize="@dimen/_16sdp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/welcome"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/Donothaveanaccount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/welcome"
                        android:layout_marginLeft="2dp"
                        android:text="@string/Register"
                        android:textColor="@color/red_200"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="italic" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/logindeatilaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/background_login"
                android:clickable="true"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/background_login"
                android:clickable="true"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/registration"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                android:visibility="gone" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>