<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.MainActivity">

        <FrameLayout
            android:id="@+id/viewMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:background="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/messenger"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/messengericon"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/messenger"
                        app:tint="@color/grey" />

                    <TextView
                        android:id="@+id/messengerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/messenger"
                        android:textColor="@color/grey" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/news"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/newsicon"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/newspaper"
                        app:tint="@color/grey" />

                    <TextView
                        android:id="@+id/newstext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/news"
                        android:textColor="@color/grey" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/accountIcon"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_account_circle_24"
                        app:tint="@color/grey" />

                    <TextView
                        android:id="@+id/accountText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/account"
                        android:textColor="@color/grey" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>


    </RelativeLayout>
</layout>